Fix classname for dark mode in validation notice (https://github.com/woocommerce/woocommerce-blocks/pull/12037)

--- a/plugins/woocommerce-blocks/packages/components/validation-input-error/style.scss
+++ b/plugins/woocommerce-blocks/packages/components/validation-input-error/style.scss
@@ -10,7 +10,7 @@
 	}
 }
 
-.has-dark-mode-palette .wc-block-components-validation-error {
+.has-dark-controls .wc-block-components-validation-error {
 	color: color.adjust($alert-red, $lightness: 30%);
 }
 
